--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,8 +2,10 @@ set(BINARY ${CMAKE_PROJECT_NAME}_tst)
 
 set(TEST_SOURCES    main.cpp 
                     Gates_tst.cpp 
-                    MemoryBit_tst.cpp 
-                    Bit_tst.cpp)
+                    MemoryBit_tst.cpp
+                    MemoryByte_tst.cpp 
+                    Bit_tst.cpp
+                    Byte_tst.cpp)
 
 add_executable(${BINARY} ${TEST_SOURCES})
 
