--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,8 @@ set(TEST_SOURCES    main.cpp
                     MemoryByte_tst.cpp 
                     Bit_tst.cpp
                     Byte_tst.cpp
-                    ByteEnabler_tst.cpp)
+                    ByteEnabler_tst.cpp
+                    Register_tst.cpp)
 
 add_executable(${BINARY} ${TEST_SOURCES})
 
