--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,7 +8,8 @@ set(TEST_SOURCES    main.cpp
                     Byte_tst.cpp
                     ByteEnabler_tst.cpp
                     Register_tst.cpp
-                    Decoder_tst.cpp)
+                    Decoder_tst.cpp
+                    RAM_tst.cpp)
 
 add_executable(${BINARY} ${TEST_SOURCES})
 
